--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -6,9 +6,13 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Radzen
+@using Radzen.Blazor
 @using Microsoft.JSInterop
 @using BlazorEcommerce
 @using BlazorEcommerce.Components
 @using BlazorEcommerce.Components.Layout
 @using BlazorEcommerce.Repository.IRepository
 @using BlazorEcommerce.Data.Models
+@using BlazorEcommerce.Services.Extensions
+@using BlazorEcommerce.Components.Shared
