--- a/Components/Pages/Product/List.razor
+++ b/Components/Pages/Product/List.razor
@@ -1,13 +1,12 @@
-﻿@page "/category"
-
-
-@inject ICategoryRepository _categoryRepository
+﻿@page "/product"
+@using System.Globalization
+@inject IProductRepository _productRepository
 @inject IJSRuntime _JS
 
 <PopupModel OnModalConfirmation="ConfirmDelete_Click"
         ButtonBootstrapStyle="btn-danger"
         ButtonText="Delete"
-        Title="Are you sure you want to delete this Category?">
+        Title="Are you sure you want to delete this Product?">
 </PopupModel>
 
 @if (IsProcessing)
@@ -22,39 +21,45 @@ else
         <div class="card-header bg-black bg-gradient ml-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="text-white py-2">Category List</h2>
+                    <h2 class="text-white py-2">Product List</h2>
                 </div>
             </div>
         </div>
         <div class="card-body p-4">
             <div class="row pb-3">
                 <div class="col-12 text-end">
-                    <a href="category/create" class="btn btn-lg btn-secondary" style="width:250px;">
-                        <i class="bi bi-plus-square"></i> Add New Category
+                    <a href="product/create" class="btn btn-lg btn-secondary" style="width:250px;">
+                        <i class="bi bi-plus-square"></i> Add New Product
                     </a>
                 </div>
             </div>
-            @if (Categories.Any())
+            @if (Products.Any())
             {
                 <table class="table table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>Name</th>
+                            <th>Price</th>
+                            <th>Special Tag</th>
+                            <th>Category</th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var obj in Categories)
+                        @foreach(var obj in Products)
                         {
                             <tr>
                                 <td>
                                     @obj.Name
                                 </td>
+                                <td>@obj.Price.ToString("C", CultureInfo.GetCultureInfo("en-us"))</td>
+                                <td><span class="badge text-bg-info"> @obj.SpecialTag</span></td>
+                                <td>@obj.Category.Name</td>
                                 <td>
-                                    <a href="@($"category/update/{obj.Id}")" class="btn btn-primary">
+                                    <a href="@($"product/update/{obj.Id}")" class="btn btn-primary">
                                         <i class="bi bi-pencil-square"></i> Edit
                                     </a>
-                                    <button class="btn btn-danger" @onclick="() => HandleDelete(obj.Id)">
+                                    <button class="btn btn-danger" @onclick="()=>HandleDelete(obj.Id)">
                                         <i class="bi bi-trash3"></i> Delete
                                     </button>
                                 </td>
@@ -69,33 +74,30 @@ else
 
 @code {
     private bool IsProcessing { get; set; } = true;
-    private IEnumerable<Category> Categories { get; set; } = new List<Category>();
-    private int DeleteCategoryID { get; set; } = 0;
-    protected override async Task OnInitializedAsync()
-    {
-
-    }
+    private IEnumerable<Product> Products { get; set; } = new List<Product>();
+    private int DeleteProductID { get; set; } = 0;
+    
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            await LoadCategories();
+            await LoadProducts();
             IsProcessing = false;
             StateHasChanged();
         }
         //return base.OnAfterRenderAsync(firstRender);
     }
 
-    private async Task LoadCategories()
+    private async Task LoadProducts()
     {
-        Categories = await _categoryRepository.GetAllAsync();
+        Products= await _productRepository.GetAllAsync();
         // Load categories
     }
 
     private void HandleDelete(int id)
     {
-        DeleteCategoryID = id;
+        DeleteProductID = id;
         _JS.InvokeVoidAsync("ShowConfirmationModal");
     }
 
@@ -103,18 +105,18 @@ else
     {
         IsProcessing = true;
         await _JS.InvokeVoidAsync("HideConfirmationModal");
-        if (isConfirmed && DeleteCategoryID != 0)
+        if(isConfirmed && DeleteProductID != 0)
         {
-            var result = await _categoryRepository.DeleteAsync(DeleteCategoryID);
-            if (result)
-                _JS?.ToastrSuccess("Category Delete Successfully");
+            var result = await _productRepository.DeleteAsync(DeleteProductID);
+            if(result)
+                _JS?.ToastrSuccess("Product Delete Successfully");
             else
                 _JS?.ToastrError("Error Encountered while deleting");
 
-            await LoadCategories();
+            await LoadProducts();
         }
-
-        DeleteCategoryID = 0;
+        
+        DeleteProductID = 0;
         IsProcessing = false;
     }
 }
