--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,19 +1,21 @@
 ﻿@inherits LayoutComponentBase
-
+@using BlazorEcommerce.Utilities
+@inject AuthenticationStateProvider _AuthenticationStateProvider
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+ <AuthorizeView Roles="@RoleConstant.Admin">
+        <div class="sidebar">
+            <NavBarAdmin />
+        </div>
+    </AuthorizeView>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+        @if (_navBarVisible) 
+        {
+            <TopNavBar></TopNavBar>
+        }
+        @Body
     </main>
+
 </div>
 
 <div id="blazor-error-ui" data-nosnippet>
@@ -21,3 +23,36 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+
+
+@code {
+    private bool _navBarVisible;
+    protected override async Task OnInitializedAsync()
+    {
+        _navBarVisible = await ShowNavBar();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        _navBarVisible = await ShowNavBar();
+    }
+
+    private async Task<bool> ShowNavBar()
+    {
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var authenticated = user.Identity is not null && user.Identity.IsAuthenticated;
+
+        if (!authenticated)
+        {
+            return true;
+        }
+
+        //Navbar should not be displayed to admin user
+        if (!user.IsInRole(RoleConstant.Admin))
+        {
+            return true;
+        }
+        return false;
+    }
+}
