Adding Card and Shopping Detail

--- a/Components/Layout/TopNavBar.razor
+++ b/Components/Layout/TopNavBar.razor
@@ -1,7 +1,8 @@
-﻿@inject AuthenticationStateProvider _authStateProvider
-@* @inject SharedStateService _sharedstateService
+﻿@using BlazorEcommerce.Services
+@inject AuthenticationStateProvider _authStateProvider
+ @inject SharedStateService _sharedstateService
 @inject IShoppingCartRepository _shoppingCartRepository
- *@
+ 
 <nav class="navbar navbar-expand-md navbar-dark modern-navbar">
 	<div class="container-fluid navbar-container">
 		<a class="navbar-brand brand-wrapper" href="">
@@ -24,7 +25,7 @@
 				<li class="nav-item">
 					<NavLink class="nav-link nav-link-custom" href="/cart">
 						<i class="bi bi-cart3 nav-icon"></i>
-						<span class="nav-text">Cart</span>
+						<span class="nav-text">Cart (@_sharedstateService.TotalCartCount)</span>
 					</NavLink>
 				</li>
 				<li class="nav-item">
@@ -76,28 +77,28 @@
 
 
 @code {
-	// protected override void OnInitialized()
-	// {
-	// 	_sharedstateService.OnChange += OnSharedStateChange;
-	// 	GetInitialCount();
-	// }
+	protected override void OnInitialized()
+	{
+		_sharedstateService.OnChange += OnSharedStateChange;
+		GetInitialCount();
+	}
 
-	// private void OnSharedStateChange()
-	// {
-	// 	InvokeAsync(StateHasChanged);
-	// }
+	private void OnSharedStateChange()
+	{
+		InvokeAsync(StateHasChanged);
+	}
 
-	// public async Task GetInitialCount()
-	// {
-	// 	var authState = await _authStateProvider.GetAuthenticationStateAsync();
-	// 	var user = authState.User;
+	public async Task GetInitialCount()
+	{
+		var authState = await _authStateProvider.GetAuthenticationStateAsync();
+		var user = authState.User;
 
-	// 	_sharedstateService.TotalCartCount =
-	// 	await _shoppingCartRepository.GetTotalCartCartCountAsync(user?.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value);
+		_sharedstateService.TotalCartCount =
+		await _shoppingCartRepository.GetTotalCartCartCountAsync(user?.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value);
 
-	// }
-	// public void Dispose()
-	// {
-	// 	_sharedstateService.OnChange -= OnSharedStateChange;
-	// }
+	}
+	public void Dispose()
+	{
+		_sharedstateService.OnChange -= OnSharedStateChange;
+	}
 }
